# Autonomous-Robot-Search-of-an-Enviroment

./: CMakeLists.txt  install.sh  simulate.sh
launch/: gmapping.launch  gmapping_demo_custom.launch
models/: MY580.SLDPRT  MY580.STL  MY580.dae
src/: contest1.cpp  frontier_search.cpp  frontier_search.h  globals.h  make_marker.cpp  make_marker.h  test_contest1.cpp  wall_follow.cpp  wall_follow.h
src/backup/: frontier_search.cpp  globals.h  test_contest1.cpp  wall_follow.cpp
worlds/: test.world
